--- a/cap/src/main/resources/application.yml
+++ b/cap/src/main/resources/application.yml
@@ -3,8 +3,8 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: ?????
-    password: '?????'
+    username: root
+    password: '1234'
     url: jdbc:mysql://localhost:3306/sys
   thymeleaf:
     cache: false
